jessica avatarı güncellendi ve eski resim silindi

--- a/challange1/index.html
+++ b/challange1/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="profil-karti">
-        <img src="image/Jessica.jpg" alt="Jessica Randall profil fotoğrafı">
+        <img src="image/avatar-jessica.jpeg" alt="Jessica Randall profil fotoğrafı">
         <h1>Jessica Randall</h1>
         <h3>London, United Kingdom</h3>
         <p>"Front-end developer and avid reader."</p>
